[package]
name = "ohttp"
version = "0.1.0"
authors = ["Martin Thomson <mt@lowentropy.net>"]
edition = "2018"

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
env_logger = {version = "0.8", default-features = false}
hex = "0.4"
lazy_static = "1.4"
log = {version = "0.4.0", default-features = false}
hpke = "0.5.0"
rand = { version = "0.7", default-features = false, features = ["getrandom"] }
hkdf = "0.10"
aead = "0.3"
aes-gcm = "0.8"
sha2 = "0.9"

[build-dependencies]
bindgen = { version = "0.56", default-features = false, features= ["runtime"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
